Move edit icons, fix uneven block styling

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -66,6 +66,7 @@
     clear: both;
     margin-left: 15px;
     margin-right: 15px;
+    margin-bottom:20px;
 }
 
 @media (max-width: 1249px) {
@@ -103,8 +104,9 @@ div.evEventItem {
 	margin-top: 0px !important;
 }
 div.evEventItem div {
-	margin-left:100px;
+	margin-left:120px;
 }
+div.evEventItem label,
 #evlistEventDetail div label,
 #evlistEvent div label {
     float: left;
